# code

./: .gitignore  README.md  Tuprules.tup  ircd_conf_to_json.py
Cadence/: README
Cadence/Cadence/: Cadence.pidb  Main.cs
Cadence/CadenceGTK/: AssemblyInfo.cs  CadenceGTK.csproj  CadenceGTK.pidb  app.desktop
Cadence/CadenceWPF/: CadenceWPF.csproj
Cadence/LibEQBeats/: DataTypes.cs  EQBeatsConnector.cs  LibEQBeats.pidb
Cadence/LibTester/: Program.cs
FRC_2412_CODE/Java_09/: .anjuta_sym_db.db
FRC_2412_CODE/python_10/: testing.py
GrimDark/: README.md
Hash-table/src/: Hash.mjava  HashTable.java  HashTable.java.save
Hash-table/test/: output.txt
Immature/: immature.py
Multiple-Account-SMS-Load-Balancing/: README
MuteBot/: .gitignore  MuteBot.sln  MuteBot.userprefs
MutuallyAssured/: .gitignore  Readme.markdown
RaveServ/: .gitignore  CMakeLists.txt
RaveServ/src/: CMakeLists.txt  channel.c  list.c  raveserv.c  read_line.c
StreamControl/: vba.ini
ardreth/: README.md
ardreth/src/: client.py  commands.py
asparagus/: asparagus  requirements.txt
asparagus/modules/: admin.py  fibbonacci.py  opname.py  reddit.py  tfw.py  twitchtv.py  youtube.py  znc.py
atorashii/: README.md
comic-site/: Procfile  README.md  project.clj
constellation/: README.md  project.clj
dcpu-maze/: .gitignore  README.md  maze.txt
deploy/: config.tcl  deploy.tcl
derpiloader/: LICENSE  make-useragent.sh
docs/from-ftp-to-continuous-deployment/: Dockerfile  (+2 more)
elixirtest/: mix.exs
eon/: .gitignore
errco/: Makefile  errco.c  mkfile
experiments/: .gitignore  add.go  libsum.nim
filescan/: LICENSE  filescan.py
fproot/: path.go  path.py
go-mpdc/: main.go
hostcrack/: test.c
initiate/: initiate.sh
irc/: ircd_conf_to_json.py
irc/sancara/: .gitignore  CMakeLists.txt  README.md  config.lua.default
irc/sancara/doc/: layout.diagram
irc/sancara/doc/studies/: CMakeLists.txt  tinybot.c
irc/sancara/include/: config.h.in  read_line.h  sancara.h  script.h  ui.h
irc/sancara/scripts/: serialize.lua  topic.lua
irc/sancara/src/: CMakeLists.txt  Tupfile  irc.c  sancara.c  script.c  ui.c
irc/tirek/: .gitignore  .ycm_extra_conf.py  Makefile.am  README.md  autogen.sh  configure.ac
irc/tirek/doc/: Makefile.am  ircd.motd
irc/tirek/include/: macros.h  noddy.h  state.h
irc/tirek/scripts/: reconfigure.sh
irc/tirek/src/: Makefile.am  main.c  noddy.c  state.c  state_test.py
javaassignments/: README.markdown
lib/: README.md
lightembed/: LICENSE  README.md
mazegame/: Makefile  maze.c
moon-git/: git2markdown.lua
mustached-shame/: .gitignore  LICENSE
other/morpheus/morpheus/: morpheus.cabal  stack.yaml
other/morpheus/morpheus/app/: Main.hs
other/morpheus/morpheus/src/Network/: Matrix.hs
other/morpheus/morpheus/src/Network/Matrix/Types/: Event.hs  Login.hs
other/morpheus/morpheus/test/: Spec.hs
otp-encryption/: Makefile
phaeon/: config.lua  handlers.lua  phaeon.lua
programming-challenges/: README.md
proxyd/: luairc-test.lua
quicksort-implementations/: README.md
relaxation/: deepbreaths.lua
shell/: backuplogs.sh
smallfuck/: Makefile  test.sf  test2.sf
sothesby/: LICENSE
tilapia/: README.md
tripping-wight/: README.md  basicjoin.py  config.json  utils.py
trolling/: init.php
vala/: socket.vala
vixircd/: .gitmodules  .lvimrc
yolo-nemesis/: README.markdown
zncmodules/: ignore.cpp  partdetach.cpp  telnet.cpp  version.cpp
(+1180 files in other folders)
