name:                morpheus
version:             0.1.0.0
synopsis:            Haskell bindings (and a bot) for Matrix
description:         Please see README.md
homepage:            http://github.com/Xe/morpheus
license:             BSD3
license-file:        LICENSE
author:              Christine Dodrill
maintainer:          me@christine.website
copyright:           2015
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Matrix
                     , Network.Matrix.Types.Login
                     , Network.Matrix.Types.Event
  build-depends:       base
                     , aeson
                     , containers
                     , unordered-containers
                     , wreq
                     , lens
                     , lens-aeson
                     , bytestring
                     , text
  default-language:    Haskell2010

executable morpheus-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , morpheus
                     , pathwalk
  default-language:    Haskell2010

test-suite morpheus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , morpheus
                     , hspec
                     , text
                     , bytestring
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Xe/morpheus
